--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -80,9 +80,10 @@
                             <div class="icon">
                                 <i data-feather="send"></i>
                             </div>
-                            <h2 class="title">Amplify your business.</h2>
+                            <h2 class="title">We make software that stands out.</h2>
+                            <p class="description"> Amplify your business with latest tech.  </p>
                             <p class="description"> Collaborate with us today and bring your imagination to reality </p>
-                            <p class="description"> We are fast. We are growing. Our eyes are set into bringing the most out of your project.  </p>
+
                             <div class="purchase-btn">
                                 <a class="btn-transparent" href="contact">Collaborate now</a>
                             </div>
@@ -104,7 +105,7 @@
                 <div class="section-title text-center">
                     <span class="subtitle">What we can do for you</span>
                     <h2 class="title">Services provided for you.</h2>
-                    <p class="description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration.</p>
+                    <p class="description">Quality over quantity <br>to help you make that difference. </p>
                 </div>
             </div>
         </div>
@@ -224,7 +225,7 @@
                     <div class="section-title text-center">
                         <span class="subtitle">Who we've worked with</span>
                         <h2 class="title">Some of our most recent collaborations</h2>
-                        <p class="description">In the fast moving industry, <br> .</p>
+                        <p class="description">A privilege to have accomplished projects with: <br></p>
                     </div>
                 </div>
             </div>
