anchor element fixed in services

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -115,7 +115,7 @@
 
                     <!-- start single Services -->
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <a href="service-details.html">
+                        <!-- <a href="service-details.html"> -->
                             <div class="service service__style--2 text-left">
                                 <div class="icon d-flex justify-content-center">
                                     <i data-feather="file"></i>
@@ -125,13 +125,13 @@
                                     <p>Turning your business logic to highly secure smart contracts.</p>
                                 </div>
                             </div>
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- End single Services -->
 
                     <!-- start single Services -->
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <a href="service-details.html">
+                        <!-- <a href="service-details.html"> -->
                             <div class="service service__style--2 text-left">
                                 <div class="icon d-flex justify-content-center">
                                     <i data-feather="monitor"></i>
@@ -141,13 +141,13 @@
                                     <p>From start to finish. We take care of everything.</p>
                                 </div>
                             </div>
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- End single Services -->
 
                     <!-- start single Services -->
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <a href="service-details.html">
+                        <!-- <a href="service-details.html"> -->
                             <div class="service service__style--2 text-left">
                                 <div class="icon d-flex justify-content-center">
                                     <i data-feather="briefcase"></i>
@@ -157,13 +157,13 @@
                                     <p>Our expertise can help you reach new heights.</p>
                                 </div>
                             </div>
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- End single Services -->
 
                     <!-- start single Services -->
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <a href="service-details.html">
+                        <!-- <a href="service-details.html"> -->
                             <div class="service service__style--2 text-left">
                                 <div class="icon d-flex justify-content-center">
                                     <i data-feather="dollar-sign"></i>
@@ -173,13 +173,13 @@
                                     <p>Pitch your business to us and we invest. (Coming soon)</p>
                                 </div>
                             </div>
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- End single Services -->
 
                     <!-- start single Services -->
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <a href="service-details.html">
+                        <!-- <a href="service-details.html"> -->
                             <div class="service service__style--2 text-left">
                                 <div class="icon d-flex justify-content-center">
                                     <i data-feather="bar-chart"></i>
@@ -189,13 +189,13 @@
                                     <p>Helping you stand out in the crowd. (Coming soon)</p>
                                 </div>
                             </div>
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- End single Services -->
 
                     <!-- start single Services -->
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <a href="service-details.html">
+                        <!-- <a href="service-details.html"> -->
                             <div class="service service__style--2 text-left">
                                 <div class="icon d-flex justify-content-center">
                                     <i data-feather="trending-up"></i>
@@ -205,7 +205,7 @@
                                     <p>Data science and analytics at fraction of cost. (Coming soon)</p>
                                 </div>
                             </div>
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- End single Services -->
 
