--- a/src/app/pages/career/career.component.html
+++ b/src/app/pages/career/career.component.html
@@ -24,6 +24,21 @@
                     <div class="content">
                         <div class="inner">
                             <div class="content_heading">
+                                <div class="category_list"><a href="/portfolio-details">Backend | Frontend | Marketing</a></div>
+                                <h4 class="title"><a href="blog-details.html">Our internship program is starting from March 1. Please apply via LinkedIn. </a></h4>
+                            </div>
+                            <div class="content_footer"><a class="rn-btn btn-opacity" href="https://www.linkedin.com/jobs/search/?f_C=77754283&geoId=92000000" target="blank_">Open in Linkedin</a></div>
+                        </div><a class="transparent_link" href="https://www.linkedin.com/jobs/search/?f_C=77754283&geoId=92000000" target="blank_"></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30">
+                <div class="im_box">
+                    <div class="thumbnail"><a href="https://www.linkedin.com/jobs/view/2863167801/" target="blank_"><img class="w-100" src="assets/images/blog/programmer.jpg" alt="Blog Images"></a></div>
+                    <div class="content">
+                        <div class="inner">
+                            <div class="content_heading">
                                 <div class="category_list"><a href="/portfolio-details">Reactjs | Web3js</a></div>
                                 <h4 class="title"><a href="blog-details.html">2 Front-end Developers</a></h4>
                             </div>
@@ -59,7 +74,7 @@
                         </div><a class="transparent_link" href="https://www.linkedin.com/jobs/view/2868062131/" target="blank_"></a>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30">
                 <div class="im_box">
                     <div class="thumbnail"><a href="blog-details.html"><img class="w-100" src="assets/images/blog/blog-04.jpg" alt="Blog Images"></a></div>
@@ -137,7 +152,7 @@
                     <h2 class="title">All applications are taken via LinkedIn right now.</h2>
                     <ul class="page-list">
                         <li class="rn-breadcrumb-item"><a href="index.html">Our door remains open for all the tech-enthusiast volunteers.</a></li>
-                        <li class="rn-breadcrumb-item active">For intern opportunities, email us at <b><a href="mailto:career@bitmosys.com" class="theme-gradient">career@bitmosys.com</a></b>.</li>
+                        <li class="rn-breadcrumb-item active">For opportunities, email us at <b><a href="mailto:career@bitmosys.com" class="theme-gradient">career@bitmosys.com</a></b>.</li>
                     </ul>
                 </div>
             </div>
